# p2x

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README.html  README.org  README.txt  TODO.org  acinclude.m4  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  do_config.sh  do_config_win32_mingw.sh  p2x-show-tree  show-tree.sh  update-namespaces.sh  vcs-version.sh
ci/: debian-packages-tests.txt  debian-packages.txt
ci/jenkins/: create-src-tarball.J  create-tarball.J  docker-test-debian-package.J  docker-test-package.J  info.org  p2x-build.J
ci/scripts/: build-src-tarball.sh  create-src-tarball.sh  get-version.sh  install-and-check.sh  setup-build-system.sh  update-dockerfiles.sh  update-m4.sh
config/: env-clang-n.sh  env-clang.sh  env-dbg.sh  env-opt3-n.sh  env-opt3.sh  ylwrap
debian/: README.Debian  README.source  changelog  control  copyright  gbp.conf  node-p2x.install  node-p2x.postinst  node-p2x.prerm  p2x.install  prerm  rules  update-gitcommitid.sh
debian/patches/: 0001-Do-we-need-this.patch  0001-Some-changes-to-octave-invocation-options-no-change-.patch  0002-create-instdir.patch  0003-Do-not-rely-on-NPM-packages-or-running-P2X-JS-when-b.patch  0003-Fix-unit-tests.patch  0003-JS-tests-only-when-npm-found.patch  0003-No-install-modules.patch  0003-Use-C-17-to-compile.patch  0003-create-instdir-use-DESTDIR.patch  0003-npm-link-in-DESTDIR.patch  0004-Just-warn-when-npm-pkgs-are-not-found-installed.patch  0004-Need-to-try-npm-command-twice.patch  0004-Octave-does-not-exit-cleanly-when-run-in-cowrunner.patch  0004-Set-HOME-correctly.patch  0005-Also-install-compress.js.patch  0005-Better-makefile-dependencies-to-install-the-npm-modu.patch  0005-Debug-failing-test.patch  0005-Make-list-of-packages-identical-to-debian-control.patch  0005-The-four-argument-fopen-is-not-compatible-with-older.patch  0005-Try-this.patch  0006-Adapt-script-to-install-pkgs-in-cowbuilders.patch  0006-Do-not-rely-on-NPM-packages-or-running-P2X-JS-when-b.patch  0006-Do-not-rely-on-running-P2X-JS-when-building.patch  0006-Print-bad-test-logs.patch  0006-configure-switch-for-js-version.patch  0006-configure.patch  0007-Also-install-RNG-grammar.patch  0007-Can-give-VCS-version-by-configure-flag.patch  0007-Cleanup-configure.patch  0007-JS-tests-only-work-when-most-xml-is-installed.patch  0007-Need-to-try-twice.patch  0008-Fix-p2x-command.patch  0008-Generate-all_tests.sh.patch  0008-Install-Apache-config-to-share-dir.patch  0008-Install-to-correct-location.patch  0008-P2X_HOME-must-be-set-here.patch  0009-Catch-errors.patch  0009-Fix-JS-tests.patch  0009-Fix-whitespace-not-ignored.patch  0009-Install-scanner-c.xml.patch  (+24 more)
docker/: test-on-docker.sh
docker/debian-bullseye/: Dockerfile  Dockerfile.build
docker/debian-stable/: Dockerfile  Dockerfile.build  debian-packages.txt
examples/: Makefile.am  Makefile.in
examples/configs/: cdecls  cfuncs  csv  default  fort2.conf  merged-binary  newline-merged  postfix-test  scanner-c.json  scanner-c.xml  scanner-simple.json  scanner-test1.json  unified-parser.json  unified-scanner.json  unified.json
examples/configs-fail/: overwrite-to-paren
examples/configs-special/: cfuncs.p2c  matlab.p2c  paren-same-end.p2c
examples/in/: 1l1l1l1l1.exp  1p2ep3.exp  1r1r1r1r1.exp  1r1r1r1r1_mixed.exp  1r1r1r1r1_mixed2.exp  add3tadd3tadd3.exp  assign.exp  bin-paren-empty.exp  bin-paren-prec.exp  bin-paren-prec2.exp  bin-paren.exp  bin2.exp  binary-prec.exp  binary-prec2.exp  binary-prec3.exp  bparbpar-br.exp  bparbpar-br2.exp  bparbpar-br3.exp  bparbpar.exp  brparbrpar-br.exp  brparbrpar-br2.exp  brparbrpar-br3.exp  brparbrpar.exp  c_strings3.exp  ccomment.exp  cdecls-fail.exp  cdecls.exp  cexpr.exp  cfunc.exp  colon.exp  comma.exp  commaplus.exp  commasemicolon.exp  csv.exp  csv2.exp  div3.exp  easy.ec.exp  email-2.exp  email.exp  eq2.exp  (+170 more)
examples/xml/: 1p2ep3.xml  f1.xml  fl1rg.xml  ftp2.xml  ftp3.xml  l1p2r.xml
examples/xsl/: cdecls.xsl
m4/: ax_cxx_compile_stdcxx_17.m4
src/: Makefile.am  Makefile.in  TreePrintHelperJSONChildren.hh  TreePrintHelperMatlab.hh  TreePrintHelperMatlabChildren.hh  TreePrintHelperMatlabLR.hh  TreePrintHelperMatlabMerged.hh  assoc.ncd.cc  assoc.ncd.enum.hh  assoc.ncd.hh  code-xml.rnc.in  logger.cc  logger.hh  logger.ncd.cc  logger.ncd.enum.hh  logger.ncd.hh  modes.ncd.cc  modes.ncd.enum.hh  modes.ncd.hh  namespace-ca  namespace-cx  ostreams.hh  output-modes.ncd.cc  output-modes.ncd.enum.hh  output-modes.ncd.hh  p2x-opts.cc  p2x-opts.ggo  p2x-opts.hh  p2x.cc  p2xtests.cc  re2c-scanner-c.cc  re2c-scanner-c.re  re2c-scanner-m.cc  re2c-scanner-m.re  re2c-scanner-r.cc  re2c-scanner-r.re  re2c-scanner-strings.cc  re2c-scanner-strings.re  scanner-c.cc  scanner-c.ll  (+19 more)
src-js/: Makefile.am  Makefile.in  assoc.ncd.js  compress.js  gennc-common.js  hashmap.js  kill-comments-empty.sh  modes.ncd.js  p2x-main.js  p2x-tools.js  p2x-webapp.js  p2x.js  p2xjs  parse-opts.js  parse-xml.js  parseXml.js  parseconf-text2json.js  run-html-form.sh  scanconf-unifiy.js  scanconf-xml2json.js  scanner-setup.js  scanner.js  server-apache-2.4.conf.in  test-argv.js  test-enum.js  test-inter.html  test-parser.js  test-read-cnf.js  test-read-cnf.sh  test-scanner-set-config.js  test-scanner.js  test.html  token.ncd.js
src-js/test/: test.js
src/m/: dorep.m  (+1 more)
tests/: Makefile.am  Makefile.in  run-unit-test
tests/sh/: Makefile.am  Makefile.in  add-columns23.py  add-columns23.xsl  all_tests.sh  calcspeed.py  cdecls.sh  cdecls_compile.sh  chars.txt  check-indent.xsl  cmp_js_man.sh  common.sh  dpparse.sh  false_test.sh  funcs.sh  gen_case.sh  genrandtoken.py  head_cmp_js.sh  head_cmp_jsy.sh  head_output_stability.sh  head_reparse.sh  head_reproduce.sh  head_reproduce_strict.sh  header_all_tests.sh  indent_tests.sh  install_tests.sh  large_scale.sh  merge_tests.sh  myshunit2  myshunit2.patch  output_mode_json.sh  output_mode_json_merged.sh  output_mode_matlab.sh  output_mode_matlab_merged.sh  output_modey.sh  p2x_tests.sh  p2x_tests2.sh  p2xjs_mocha_tests.sh  parse_tests.sh  parse_tests_merged.sh  (+26 more)
tests/sh/results/: times.org
(+43 files in other folders)
